# shortener

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  clippy.toml  go.mod
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  docker.yml  release.yml  tests.yml  zizmor.yml
src/: api_key.rs  code.rs  config.rs  database.rs  lib.rs  logger.rs  server.rs  version.rs
