[package]
name = "shortener"
version = "0.1.1"
authors = ["Ruoyu Zhong <zhongruoyu@outlook.com>"]
edition = "2024"
description = "A simple URL shortener."
readme = "README.md"
homepage = "https://github.com/ZhongRuoyu/shortener"
repository = "https://github.com/ZhongRuoyu/shortener.git"
license = "MIT"
default-run = "shortener"

[dependencies]
axum = "0.8"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.6", features = ["derive", "string"] }
hex = "0.4"
log = { version = "0.4", features = ["std"] }
percent-encoding = "2.3"
rand = "0.10"
rusqlite = "0.39"
sha2 = "0.11"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "net", "rt-multi-thread"] }
url = "2.5"

[build-dependencies]
chrono = "0.4"

[features]
bundled-sqlite = ["rusqlite/bundled"]
