[package]
name = "shortener"
version = "0.2.0"
authors = ["Ruoyu Zhong <zhongruoyu@outlook.com>"]
edition = "2024"
description = "A simple URL shortener."
readme = "README.md"
homepage = "https://github.com/ZhongRuoyu/shortener"
repository = "https://github.com/ZhongRuoyu/shortener.git"
license = "MIT"
keywords = ["url-shortener", "web-server", "sqlite"]
categories = [
  "command-line-utilities",
  "web-programming",
  "web-programming::http-server",
]
default-run = "shortener"

[dependencies]
axum = "0.8.9"
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive", "string"] }
clap_complete = "4.6.5"
csv = "1.4.0"
hex = "0.4.3"
log = { version = "0.4.29", features = ["std"] }
percent-encoding = "2.3.2"
rand = "0.10.1"
rusqlite = "0.39.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tabled = "0.20.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
url = "2.5.8"

[build-dependencies]
chrono = "0.4"

[features]
bundled-sqlite = ["rusqlite/bundled"]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"
